Set up next-step links' behaviour

--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -268,11 +268,12 @@ span.btn-shortcut {
 } 
 
 #potd { 
-  margin-top: -70px ;
+  margin-top: -20px ;
+  font-size: 14px ;
   .small-text {
     font: { 
       size: 12px ;
-    } 
+    }
   } 
   > div { 
     padding: { 
