--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -28,7 +28,7 @@
       }) ;
       MathJax.Hub.Config({
       styles: {
-      "span" : { "font-size" : "14px" , "font-weight" : "100" }
+      "span.MathJax span" : { "font-size" : "14px" , "font-weight" : "100" }
       }
       }) ;
     = javascript_include_tag "http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML"
@@ -52,9 +52,7 @@
                         %button.btn.btn-large.btn-primary{ type: :submit }= "Sign In"
 
       .row-fluid 
-        #badge.span2
-          = image_tag 'landing/finalist.png'
-        #tagline.span5.offset1= 'Grades will happen'
+        #tagline.span5.offset3= 'Grades will happen'
       = render partial: 'puzzles/daily'
 
     -#
