--- a/app/views/puzzles/_daily.html.haml
+++ b/app/views/puzzles/_daily.html.haml
@@ -13,17 +13,20 @@
         .span3
           = image_tag 'landing/grader-14894.png', size: '40x40', class: :blue 
           .small-text= 'Get it checked?'
-        .span9
+        .span6
+          We would be happy to give your solution a look. 
+          %p
+            You would, however, need to register and download our mobile app.
   .row-fluid{ id: 'next-steps' }
     .span2.offset2
-      %a{ id: 'btn-register'}
+      %a{ id: 'a-register'}
         = image_tag 'landing/backpack.png', size: '30x30'
         Register
     .span3
-      %a{ id: 'btn-register'}
+      %a{ id: 'a-register', href: 'https://play.google.com/store/apps/details?id=com.gradians.collect&hl=en', target: '_blank' }
         = image_tag 'scanbot-trans.png', size: '25x25'
         Download Mobile App
     .span2
-      %a{ id: 'btn-register'}
+      %a{ id: 'a-founders'}
         = image_tag 'landing/group-3359.png', size: '30x30'
         About Us
