Minor edits to the landing page

--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -269,7 +269,8 @@ span.btn-shortcut {
 
 #potd { 
   margin-top: -20px ;
-  font-size: 14px ;
+  font-size: 13px ;
+  line-height: 16px ;
   .small-text {
     font: { 
       size: 12px ;
