--- a/app/views/puzzles/_daily.html.haml
+++ b/app/views/puzzles/_daily.html.haml
@@ -14,9 +14,14 @@
           = image_tag 'landing/grader-14894.png', size: '40x40', class: :blue 
           .small-text= 'Get it checked?'
         .span6
-          We would be happy to give your solution a look. 
+          %p 
+            Give the problem a shot and send your solution over. We would be happy 
+            to give it a look.
           %p
-            You would, however, need to register and download our mobile app.
+            Register first so that we know you are. 
+          %p
+            Then, solve the problem on paper and use our mobile app to take a 
+            snap of your solution and upload it. Its that simple!
   .row-fluid{ id: 'next-steps' }
     .span2.offset2
       %a{ id: 'a-register'}
