Show time remaining to submit solution to problem of the day

--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -271,6 +271,11 @@ span.btn-shortcut {
   margin-top: -20px ;
   font-size: 13px ;
   line-height: 16px ;
+
+  .stopwatch { 
+    font: { size: 22px ; }
+  } 
+
   .small-text {
     font: { 
       size: 12px ;
