--- a/app/views/puzzles/_daily.html.haml
+++ b/app/views/puzzles/_daily.html.haml
@@ -5,7 +5,7 @@
       .row-fluid
         .span3
           = image_tag 'landing/puzzle-27479.png', size: '40x40', class: :blue 
-          .small-text= 'Problem of the Day'
+          .stopwatch.push-down{ id: 'puzzle-expiry' }
         .span8
           #pzl-daily
     .span6
