minor stylign changes to landing page

--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -273,7 +273,8 @@ span.btn-shortcut {
   line-height: 16px ;
 
   .stopwatch { 
-    font: { size: 22px ; }
+    font: { size: 18px ; } 
+    margin-top: 4px ;
   } 
 
   .small-text {
