--- a/app/views/layouts/admin-examiner.html.haml
+++ b/app/views/layouts/admin-examiner.html.haml
@@ -35,11 +35,12 @@
                      [9, 'examiners/apprentices'],
                      [10, 'examiners/disputes'],
                      [11, 'examiners/rubric/new'],
-                     [12, 'toolbox/grading/left/stabs'] ],
+                     [12, 'examiners/stabs/main'] ],
              middle: [],
              right: [],
              wide: [ ['wait', 'toolbox/generic/wait'],
                      ['X', 'toolbox/grading/right/controls'],
+                     ['Y', nil],
                      ['graph-1', nil],
                      [3, 'examiners/rubric/details'] ] } 
 
