--- a/app/views/puzzles/_daily.html.haml
+++ b/app/views/puzzles/_daily.html.haml
@@ -18,7 +18,7 @@
         .span3
           = image_tag 'landing/grader-14894.png', size: '40x40', class: :blue 
         .span6
-          .title.orange= 'Wanna get it checked?'
+          .title.orange= 'Want to get it checked?'
           %p 
             Solve the problem on paper and <span class='orange'>use our mobile app</span> 
             to take a snap of your solution. Then upload it using the same app. Its that simple! 
@@ -29,15 +29,16 @@
               Don't forget to <span class='orange'>register</span> first. Its the only 
               way we will know who you are.
   .row-fluid{ id: 'next-steps' }
-    .span3{ class: (current_account.nil? ? 'offset2' : 'offset3') }
-      %a{ id: 'a-scanbot', href: 'https://play.google.com/store/apps/details?id=com.gradians.collect&hl=en', target: '_blank' }
+    .span3{ class: (current_account.nil? ? 'offset2' : 'offset4') }
+      %a{ id: 'a-scanbot', href: 'https://play.google.com/store/apps/details?id=com.gradians.collect&hl=en', 
+          target: '_blank', data: { 'no-touch' => :true } }
         = image_tag 'scanbot-trans.png', size: '25x25'
         Download Mobile App
-    .span2
-      %a{ id: 'a-founders'}
-        = image_tag 'landing/group-3359.png', size: '30x30'
-        About Us
     - if current_account.nil?
+      .span2
+        %a{ id: 'a-founders', data: { 'no-touch' => :true } }
+          = image_tag 'landing/group-3359.png', size: '30x30'
+          About Us
       .span2
         %a{ id: 'a-register', data: { 'no-touch' => :true }, href: '#' }
           = image_tag 'landing/backpack.png', size: '30x30'
