--- a/app/views/layouts/students.html.haml
+++ b/app/views/layouts/students.html.haml
@@ -72,8 +72,9 @@
         .span12
           .navbar.navbar-inverse
             .navbar-inner
-              %a.brand.span3{ href: "#"}
+              %a.brand.span4{ href: "#"}
                 = image_tag "logo-mit-beta-2.png"
+                #tagline= 'Grades will happen'
               %ul.nav.span8.pull-right
                 - for l in control_panel 
                   %li{ class: ( l[:class].blank? ? 'dropdown' : 'dropdown hidden' ) } 
