--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -42,6 +42,7 @@
             .navbar-inner
               %a.brand.span4{ href: "#"}
                 = image_tag "logo-mit-beta-2.png"
+                #tagline= 'Grades will happen'
               %ul.nav.span7
                 %li.pull-right
                   #signin-form
@@ -51,8 +52,6 @@
                         %input.input-medium{ type: :password, name: "account[password]", placeholder: "Password" }
                         %button.btn.btn-large.btn-primary{ type: :submit }= "Sign In"
 
-      .row-fluid 
-        #tagline.span5.offset3= 'Grades will happen'
       = render partial: 'puzzles/daily'
 
     = yield :toolbox
