--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -104,9 +104,10 @@
         .span12
           .navbar.navbar-inverse
             .navbar-inner
-              %a.brand.span3{ href: "#"}
+              %a.brand.span4{ href: "#"}
                 = image_tag "logo-mit-beta-2.png"
-              %ul.nav.span9.pull-right
+                #tagline= 'Grades will happen'
+              %ul.nav.span8.pull-right
                 - for l in control_panel 
                   %li.dropdown 
                     = simple_link for: l[:for], id: l[:id], icon: l[:icon]
