First draft of the stab grading panel ...
TBD:
  1. reporting an issue
  2. Storing quality in stabs/grade

--- a/app/assets/stylesheets/indie.css
+++ b/app/assets/stylesheets/indie.css
@@ -3,4 +3,5 @@
 *= require indie/assets.css.scss
 *= require rubric.css.scss
 *= require indie/stabs.css.scss
+*= require_directory ../../../vendor/assets/stylesheets/tooltipster
 */
