Cutting puzzles some slack

--- a/app/views/puzzles/_daily.html.haml
+++ b/app/views/puzzles/_daily.html.haml
@@ -13,7 +13,7 @@
         .span8
           .title.orange= 'Problem of the Day'
           #pzl-daily
-    .span6
+    .span5.offset1
       .row-fluid
         .span3
           = image_tag 'landing/grader-14894.png', size: '40x40', class: :blue 
