--- a/app/views/layouts/students.html.haml
+++ b/app/views/layouts/students.html.haml
@@ -28,18 +28,20 @@
         -#= render partial: 'modals/customer/refund', locals: { customer: customer }
 
 - control_panel = [ {for: 'Daily Puzzle', id: 'a-daily-puzzle'},
-                    {for: 'Assignments', id: 'a-st-main'},
+                    {for: 'My Work', id: 'a-st-main'},
                     {for: 'Lessons', id: 'a-courses', class: (current_account.mimics_admin ? nil : 'hidden' )},
                     {for: 'Enroll', id: 'lnk-enroll-self'},
                     {for: "Hello, #{student.first_name}", id: 'm-account'} ]
 
 - layout = { left: [ [1, 'students/main'],
                      [3, 'course/view/filters'],
-                     [4, 'customers/activity'] ],
+                     [4, 'customers/activity'],
+                     [5, 'students/stabs'] ],
              middle: [],
              right: [],
              wide: [ ['wait', 'toolbox/generic/wait'],
                      ['X', nil],
+                     ['Y', nil],
                      [1, 'course/view/tiles'],
                      [2, 'course/view/exploded'], 
                      [3, 'customers/transactions'] ],
