--- a/app/views/layouts/students.html.haml
+++ b/app/views/layouts/students.html.haml
@@ -8,12 +8,11 @@
 - for j in [:toolbox, :menus, :modals, :notifications]
   - content_for j do 
     - klass = (j == :toolbox) ? 'hidden' : ''
-    -  m = (j == :toolbox) ? ['generic', 'preview'].map{ |a| "toolbox/#{a}" } : ['student','shared'].map{ |a| "#{j}/#{a}" }
-    - partials_f = m.map{ |b| "app/views/#{b}" }
+    - partials_f = (j == :toolbox) ? ['generic', 'preview'].map{ |a| "toolbox/#{a}" } : ['student','shared'].map{ |a| "#{j}/#{a}" }
     %div{ id: j, class: klass }
       - for f in partials_f
-        - Dir["#{f}/*.haml"].each do |p| 
-          = render file: Rails.root.join(p), locals: { server: s }
+        - Dir["app/views/#{f}/*.haml"].map{ |x| partial_path(x) }.each do |p| 
+          = render partial: p, locals: { server: s }
       -# render exceptions here 
       - if j == :menus 
         = render partial: 'menus/user/account'
