--- a/app/views/layouts/students.html.haml
+++ b/app/views/layouts/students.html.haml
@@ -63,6 +63,7 @@
       }
       }) ;
     = javascript_include_tag "http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML"
+    = javascript_include_tag "http://d3js.org/d3.v3.min.js"
     = stylesheet_link_tag 'application', 'students'
     = csrf_meta_tag
 
