Add a 'See Solution' button in the dispute resolution button

--- a/app/views/examiners/_disputes.html.haml
+++ b/app/views/examiners/_disputes.html.haml
@@ -4,3 +4,4 @@
     = simple_link for: 'Disputes', id: 'tab-disputes', href: '#pane-disputes'
 .tab-content
   #pane-disputes.tab-pane
+    =simple_button for: 'See solution', id: 'btn-dispute-soln', class: 'btn btn-inverse pull-right'
