Changed welcome e-mail to students

--- a/app/views/mailbot/_student.html.haml
+++ b/app/views/mailbot/_student.html.haml
@@ -1,35 +1,50 @@
 
 %p
-  <b>As a student</b>, you will be able to 
   %ul
     %li
-      View and download any quizzes your instructor might have made for you
+      <b>Download our Android app ...</b> 
+      %p
+        %ul
+          %li
+            Go to Google Play on your Android phone.
+          %li
+            Enter Gradians.com in the search box.
+          %li
+            The first app that shows up (called Gradians.com Scanbot) is what you need. 
+            Click on <b>Install</b>.
+          %li
+            Once installed, log into the app using the same e-mail and password you 
+            registered with.
     %li
-      View results and feedback on any quizzes that you submitted in the past 
-    %li
-      Submit your work on a new quiz for assessment using either the upload 
-      functionality in the site or via the downloadable mobile application.
-      For now, the mobile application is for Android devices only. But we 
-      hope to add other platforms soon
-
-%h3= 'On Grading - how its done'
+      <b>... then, start practising Maths problems</b>
+      %p
+        %ul
+          %li
+            Click on <b>Practice Corner.</b>
+          %li
+            Select a topic.
+          %li
+            Start solving problems on that topic as you normally would - with a pen, on paper. 
+      %p
+        If you find that you got the wrong answer, then you can always send your solution 
+        to us and we will take a look. 
+      %p
+        All that you have to do is 
+        %ul
+          %li
+            Click on the <b>Get Review</b> button. 
+          %li
+            Take a photograph of the piece(s) of paper you solved the problem on. 
+          %li
+            Click on <b>Upload</b>. 
+      %p
+        Within the day, we will tell you where the problems in your solution are. We are glad to help.
+        And so, the review comes for free.
 %p
-  Students tend to have questions on how their assignments are assessed. So, let us 
-  explain - in brief - the grading process 
+  If you have any further questions, then please feel free to write to us at <b>help@gradians.com</b>.
 %p
-  What matters most to examiners are the following 
-  %ul
-    %li
-      That the work done is the student's own. Which means, that even if a student 
-      has made mistakes, then the mistakes are his/her own 
-    %li
-      That the solution makes for a cogent story - even if incorrect. Which means, 
-      that if one goes from A to Z in the solution, then its abundantly clear that 
-      one went first from A to B, then from B to C and so on
-    %li
-      That the cogent story is then correct. Which means, that if one needed to go 
-      from A to D in the solution, then that is what happened. Going from F to L 
-      would then be wrong
+  Best regards, 
 %p
-  In other words, what an examiner looks for is whether you intended to write what 
-  you wrote, justified it and then whether what you wrote is correct
+  Gradians.com Team.
+       
+        
