Some more edits to student welcome mail

--- a/app/views/mailbot/_student.html.haml
+++ b/app/views/mailbot/_student.html.haml
@@ -38,13 +38,10 @@
           %li
             Click on <b>Upload</b>. 
       %p
-        Within the day, we will tell you where the problems in your solution are. We are glad to help.
-        And so, the review comes for free.
-%p
-  If you have any further questions, then please feel free to write to us at <b>help@gradians.com</b>.
-%p
-  Best regards, 
-%p
-  Gradians.com Team.
+        Within the day, we will have a look at your solution and tell you where we think the problem areas are. 
+        Our comments will be visible in the app itself. <b>The review is free</b>. 
+      %p
+        We are also giving you <b>100 free credit points</b> to use on our site. We call them <b>Gredits (symbol: &#x20b2;)</b>. 
+        Use these to purchase the correct answer or solution.
        
         
