Remove the trailing full-stop after the password ...
Users will copy-paste the password. The trailing full-stop will just
invalidate the password

--- a/app/views/mailbot/password_reset.html.haml
+++ b/app/views/mailbot/password_reset.html.haml
@@ -2,7 +2,7 @@
 %p
   Dear #{@name},
 %p
-  Your password has been reset to <b>#{@passwd}</b>. 
+  Your password has been reset to <b>#{@passwd}</b>
 %p
   Please note
   %ul
