another minor edit

--- a/app/views/mailbot/password_reset.html.haml
+++ b/app/views/mailbot/password_reset.html.haml
@@ -18,7 +18,7 @@
     %li
       Login to www.gradians.com using the password above and this e-mail.
     %li
-      Then, click on <b>Hello #{@name}}</b> in the top-right corner. This will open a menu. 
+      Then, click on <b>Hello, #{@name}</b> in the top-right corner. This will open a menu. 
     %li
       Click on <b>Edit Account Details</b>. 
     %li
