--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -259,6 +259,32 @@ span.btn-shortcut {
   margin-top: -10px ;
 } 
 
+#mobile-intro { 
+  padding: {
+    bottom: 20px ;
+  } 
+  min-height: 400px ;
+  h1 { 
+    font: { 
+      size: 55px ;
+      weight: 300 ;
+    } 
+  } 
+
+  > #live-phone { 
+    margin-left: 50px ;
+
+    > #screens { 
+      margin-left: 18px ;
+      position: relative ;
+      width: 167px ;
+      max-height: 251px ;
+      margin-top: -325px ;
+      img { max-height: 253px ; }
+    } 
+  } 
+} 
+
 #potd { 
   margin-top: -20px ;
   font-size: 12px ;
@@ -311,18 +337,39 @@ span.btn-shortcut {
   } 
 } 
 
+#mktg-spiel { 
+  ul { 
+    > li { 
+      color: white ;
+      > .heading { 
+        font: { size: 16px ; weight: 400 ; }
+      } 
+      > .subtext { 
+        font: { size: 13px ; weight: 300 ; variant: normal ; }
+        color: white ;
+        line-height: 15px ;
+      }
+      text-align: justified ;
+      margin-top: 10px ;
+    } 
+  } 
+} 
+
 #next-steps { 
   border-top: 1px solid white ; 
   > div { 
     border-radius: 5px ;
+    padding: 10px ;
+    min-height: 40px ;
     &:hover { 
       background-color: $panel-color;
     } 
     > a { 
       cursor: pointer ;
-      font-size: 15px ;
+      font-size: 13px ;
       text-decoration: none ;
       color: white ;
+      > img { margin-right: 7px ; }
     } 
   } 
 } 
@@ -540,7 +587,7 @@ span.btn-shortcut {
   } 
 
   h1 { font-size: 24px ; }
-  h2 { font-size: 16px ; }
+  h2 { font-size: 22px ; }
   h3 { font-size: 14px ; }
   h4 { font-size: 14px ; }
   h5 { font-size: 14px ; }
@@ -860,21 +907,20 @@ button[data-toggle='button'] {
     > li:last-child {
       float: right ;
       > a:not([id='a-reset-passwd']) { color: $orange ; font-weight: 500 ;}
-      > a[id='a-reset-passwd']{
-        font: {
-          weight: 300; 
-          size: 12px ;
-        }
-        margin: {
-          top: -10px ;
-          bottom: 5px ;
-          right: 0px ;
-        }
-        float: right ;
-        cursor: pointer ;
-      }
     }
   }
+
+  #misc-a { 
+    margin-top: 35px ;
+    > a { 
+      color: white ;
+      padding-bottom: 4px ;
+      &:hover { 
+        border-bottom: 1px solid $orange ;
+        text-decoration: none ;
+      } 
+    } 
+  } 
 
   a { 
     &.selected { 
