--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -270,6 +270,9 @@ span.btn-shortcut {
       weight: 300 ;
     } 
   } 
+  h3 { 
+    font-size: 22px ;
+  } 
 
   > #live-phone { 
     margin-left: 50px ;
@@ -338,24 +341,23 @@ span.btn-shortcut {
 } 
 
 #mktg-spiel { 
-  ul { 
-    > li { 
-      color: white ;
-      > .heading { 
-        font: { size: 16px ; weight: 400 ; }
-      } 
-      > .subtext { 
-        font: { size: 13px ; weight: 300 ; variant: normal ; }
-        color: white ;
-        line-height: 15px ;
-      }
-      text-align: justified ;
-      margin-top: 10px ;
+  .li { 
+    color: white ;
+    > .heading { 
+      font: { size: 16px ; weight: 400 ; }
     } 
+    > .subtext { 
+      font: { size: 13px ; weight: 300 ; variant: normal ; }
+      color: white ;
+      line-height: 15px ;
+    }
+    text-align: justified ;
+    margin-top: 10px ;
   } 
 } 
 
 #next-steps { 
+  margin-top: 100px ;
   border-top: 1px solid white ; 
   > div { 
     border-radius: 5px ;
