Minor edit to landing page title

--- a/app/views/mobile/_intro.html.haml
+++ b/app/views/mobile/_intro.html.haml
@@ -11,7 +11,7 @@
             = image_tag "landing-2/screenshots/#{j}.png", size: '168x253'
   .span8
     .row-fluid 
-      %h3.white= 'Turn your Android phone into your Personal Practice Parner!'
+      %h3.white= '1 Smartphone + 1 Gradians.com = 1 Personal Practice Partner'
     .row-fluid.push-down-30{ id: 'mktg-spiel'}
       .span6
         .li
